# ec2

./: .gitignore  INSTALL  README
doc/: silabs.conf
src/: CMakeLists.txt
src/debug-core/: CMakeLists.txt  Makefile.am  targets51.h
src/ec2drv/: CMakeLists.txt  c2_mode.c  csv2c.py  device_enum.h  device_table.c  device_table.csv  ec2drv.c  ec2drv.h
src/ec2tools/: CMakeLists.txt  ec2fw.c  ec2rfw.c  ec2test-any.cpp
src/newcdb/: CMakeLists.txt  main.cpp
